<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gainsboro"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/images"
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/book" />

    <RelativeLayout
        android:id="@+id/login_layout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:gravity="center">


        <FrameLayout
            android:id="@+id/username_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="240dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="5dp"
                android:hint="@string/username"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp" />

            <ImageView
                android:layout_width="31dp"
                android:layout_height="40dp"
                android:layout_gravity="left|center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:inputType="number"
                android:src="@drawable/zhanghao"
                android:visibility="visible" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/usercode_layout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="280dp"
            android:gravity="center">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="fill_parent"
                android:layout_height="52dp"
                android:hint="@string/input_word"
                android:inputType="textPassword"
                android:maxLength="20"
                android:paddingLeft="55dp"
                android:paddingRight="60dp" />

            <ImageView
                android:id="@+id/iv_pic"
                android:layout_width="31dp"
                android:layout_height="35dp"
                android:layout_gravity="left|center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/word"
                android:visibility="visible" />
        </FrameLayout>

        <Button
            android:id="@+id/bt_login"
            android:layout_width="fill_parent"
            android:layout_height="44dp"
            android:layout_below="@id/usercode_layout"
            android:layout_marginTop="10dp"
            android:background="@color/mediumblue"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/bt_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_alignRight="@id/bt_login"
            android:background="#00000000"
            android:text="webview"
            android:textColor="@color/black"
            android:textSize="15sp" />

        <Button
            android:id="@+id/bt_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/bt_login"
            android:layout_alignLeft="@id/bt_login"
            android:background="#00000000"
            android:gravity="left|center_vertical"
            android:text="@string/baiduzhixiang"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:visibility="visible" />

    </RelativeLayout>

    <Button
        android:id="@+id/bt_test"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="450dp"
        android:background="@color/mediumblue"
        android:text="@string/sourcetest"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bt_hinnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="300dp"
        android:layout_marginTop="450dp"
        android:background="@color/mediumblue"
        android:text="@string/intent"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/bt_web"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/webnew" />

    <Button
        android:id="@+id/bt_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="500dp"
        android:text="@string/xiangying" />


</RelativeLayout>